refractor code and make workie

--- a/Views/visualisations.phtml
+++ b/Views/visualisations.phtml
@@ -1,4 +1,4 @@
-<?php require __DIR__ . '/layout/header.php'; ?>
+<?php require('template/header.phtml') ?>
 
 <section class="mb-4">
     <div class="alert alert-success border-0 shadow-sm">
@@ -98,4 +98,4 @@
     </div>
 </section>
 
-<?php require __DIR__ . '/layout/footer.php'; ?>
+<?php require('template/footer.phtml') ?>
