--- a/Views/data.phtml
+++ b/Views/data.phtml
@@ -1,4 +1,4 @@
-<?php require __DIR__ . '/layout/header.php'; ?>
+<?php require('template/header.phtml') ?>
 
 <section class="mb-4">
     <div class="alert alert-info border-0 shadow-sm">
@@ -96,4 +96,4 @@
     </div>
 </section>
 
-<?php require __DIR__ . '/layout/footer.php'; ?>
+<?php require('template/footer.phtml') ?>
