--- a/Views/visualisations.phtml
+++ b/Views/visualisations.phtml
@@ -48,7 +48,7 @@
     <div class="col-md-6">
         <div class="card border-0 shadow-sm h-100">
             <div class="card-body">
-                <h3 class="h6 mb-3">Cyclomatic Complexity Over Time</h3>
+                <h3 class="h6 mb-3">Complexity Over Time</h3>
                 <div class="bg-light rounded p-5 text-center" style="min-height: 200px;">
                     <p class="text-muted mb-0">Chart placeholder</p>
                 </div>
